
Mon, Jun 16
-----------
-Added slideshow to Hardware projects
-Re-named div's to give more clarity as to what they contain

Commit 2
-Changed spacing to external resources
-started the about section
-fixed not having the about link link to the about page

Testing:
-Multiple projects in hardware projects, image slideshow is messed up


TODO:
fix the links in external resources section (convert to css grid)


Tue, Jun 17
-----------

Changed:
-Link style to align with design language(removed text decoration and colour)
-Removed unnessisary code from external resources section
-Added typing animation to the About section. Credit to: https://css-tricks.com/snippets/css/typewriter-effect/
-Added, then reverted margin of the horizontal body of the website as it was causing issues when screen size was larger than 1440px.
-Added spinner, currently acting as button on about page


Fixed:
-Image slideshow buttons not moving when resizing webpage
-External link spacing




Todo:
-Add an ascii image on the main page
~~-Figure out how to add spinner for the hardware title on about page~~
-Add margins for left and right of website contents
-Possibly convert click to spin button on about page to just run when page is loaded
-Change links that should be buttons to buttons.

Wed, Jun 18
-----------

Changed:
-Added scrolling interests bar
-Added headshot, and re-arranged index.html page


Fixed:
-Having multiple active spinners at once in about section

Broke:
-Hardware image is now overlapping the summary and text after setting margin to auto for the body of all pages
-Scrolling skills/interests bar is cut off at bottom

TODO: